--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':Sample'
+include ':Sample', ':FirUpdater'
 
 gradle.ext.compileSdkVersion = 27
 gradle.ext.buildToolsVersion = '27.0.3'
@@ -6,5 +6,5 @@ gradle.ext.supportLibraryVersion = '27.0.2'
 
 gradle.ext.minSdkVersion = 14
 gradle.ext.targetSdkVersion = 27
-gradle.ext.versionCode = 3
-gradle.ext.versionName = "1.0.2"
+gradle.ext.versionCode = 1
+gradle.ext.versionName = "1.0.0"
