--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ deploy:
 
 after_deploy:
 - "./gradlew clean build bintrayUpload -PbintrayUser=sfsheng0322 -PbintrayKey=$BINTRAY_TOKEN -PdryRun=false"
-- fir publish Sample/outputs/FirUpdater.apk -T $FIR_TOKEN -c "优化体验\n修复了一些问题"
+- fir publish Sample/outputs/FirUpdater.apk -T $FIR_TOKEN -c "修复了一些问题，优化体验"
 
 notifications:
   email:
