--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+//        maven { url 'https://dl.bintray.com/sfsheng0322/maven' }
     }
 
     dependencies {
@@ -14,6 +15,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+//        maven { url 'https://dl.bintray.com/sfsheng0322/maven' }
     }
 }
 
