--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-//        maven { url 'https://dl.bintray.com/sfsheng0322/maven' }
+        maven { url 'https://dl.bintray.com/sfsheng0322/maven' }
     }
 
     dependencies {
@@ -15,7 +15,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-//        maven { url 'https://dl.bintray.com/sfsheng0322/maven' }
+        maven { url 'https://dl.bintray.com/sfsheng0322/maven' }
     }
 }
 
