--- a/Sample/build.gradle
+++ b/Sample/build.gradle
@@ -4,13 +4,13 @@ Properties signingProperties = new Properties()
 signingProperties.load(new FileInputStream(file("../signings/signing.properties")))
 
 android {
-    compileSdkVersion gradle.compileSdkVersion
+    compileSdkVersion compile_sdk_version
     defaultConfig {
         applicationId "com.sunfusheng.firupdater.sample"
-        minSdkVersion gradle.minSdkVersion
-        targetSdkVersion gradle.targetSdkVersion
-        versionCode gradle.versionCode
-        versionName gradle.versionName
+        minSdkVersion min_sdk_version
+        targetSdkVersion target_sdk_version
+        versionCode version_code
+        versionName version_name
     }
 
     compileOptions {
@@ -28,39 +28,28 @@ android {
     }
 
     buildTypes {
-        release {
-            buildConfigField "boolean", "debugMode", "false"
-            signingConfig signingConfigs.release
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            applicationVariants.all {
-                variant -> generateApk(variant)
-            }
-        }
-
         debug {
             buildConfigField "boolean", "debugMode", "true"
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            applicationVariants.all {
-                variant -> generateApk(variant)
-            }
         }
-    }
-}
-
-def generateApk(variant) {
-    if (variant.buildType.name == "release") {
-        variant.getPackageApplication().outputDirectory = new File(project.rootDir.absolutePath + "/Sample/outputs")
-        variant.getPackageApplication().outputScope.apkDatas.forEach { apkData ->
-            apkData.outputFileName = "FirUpdater.apk"
+        release {
+            buildConfigField "boolean", "debugMode", "false"
+            signingConfig signingConfigs.release
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            applicationVariants.all { variant ->
+                variant.outputs.all {
+                    outputFileName = "FirUpdater.apk"
+                }
+            }
         }
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:' + gradle.supportLibraryVersion
-    implementation 'com.android.support:design:' + gradle.supportLibraryVersion
-    implementation 'com.sunfusheng:GroupRecyclerViewAdapter:1.0.2'
-    implementation project(":FirUpdater")
+    implementation 'com.android.support:appcompat-v7:' + support_library_version
+    implementation 'com.android.support:design:' + support_library_version
+    implementation 'com.sunfusheng:GroupRecyclerViewAdapter:1.0.8'
+    implementation project(':firupdater')
 }
