--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,23 @@
 buildscript {
+    ext {
+        compile_sdk_version = 28
+        build_tool_version = '28.0.3'
+        support_library_version = '28.0.0'
+
+        min_sdk_version = 16
+        target_sdk_version = 28
+        version_code = 13
+        version_name = '1.2.0'
+    }
+
     repositories {
         google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-        classpath 'com.novoda:bintray-release:0.8.1'
+        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.novoda:bintray-release:0.9'
     }
 }
 
