--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
         target_sdk_version = 28
         version_code = 13
         version_name = '1.2.0'
+
+        okhttp3_version = '4.0.1'
+        retrofit_version = '2.6.1'
     }
 
     repositories {
