--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -53,5 +53,5 @@ dependencies {
     implementation 'com.sunfusheng:GroupRecyclerViewAdapter:1.0.8'
 
 //    implementation project(':updater')
-    implementation project(':updater_okhttp3123')
+//    implementation project(':updater_okhttp')
 }
