add okhttp module

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -52,6 +52,6 @@ dependencies {
     implementation 'com.android.support:design:' + support_library_version
     implementation 'com.sunfusheng:GroupRecyclerViewAdapter:1.0.8'
 
-//    implementation project(':updater')
+    implementation project(':updater')
     implementation project(':updater-okhttp')
 }
