--- a/updater-okhttp/build.gradle
+++ b/updater-okhttp/build.gradle
@@ -29,15 +29,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:' + support_library_version
-
-    implementation 'com.squareup.okhttp3:okhttp:' + okhttp3_version
-    implementation 'com.squareup.okhttp3:logging-interceptor:' + okhttp3_version
+    implementation 'com.squareup.okio:okio:1.17.4'
+    implementation 'com.squareup.okhttp3:okhttp:3.14.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
     implementation 'com.squareup.retrofit2:retrofit:' + retrofit_version
     implementation 'com.squareup.retrofit2:converter-gson:' + retrofit_version
     implementation 'com.squareup.retrofit2:adapter-rxjava2:' + retrofit_version
-
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.2'
-    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.2'
 }
