--- a/updater-okhttp/build.gradle
+++ b/updater-okhttp/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.17.4'
     implementation 'com.squareup.okhttp3:okhttp:3.14.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:retrofit:' + retrofit_version
     implementation 'com.squareup.retrofit2:converter-gson:' + retrofit_version
     implementation 'com.squareup.retrofit2:adapter-rxjava2:' + retrofit_version
