--- a/updater-okhttp/build.gradle
+++ b/updater-okhttp/build.gradle
@@ -27,7 +27,6 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:' + support_library_version
     implementation 'com.squareup.okio:okio:1.17.4'
     implementation 'com.squareup.okhttp3:okhttp:3.14.2'
@@ -38,4 +37,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:' + retrofit_version
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.qw:soulpermission:1.2.1'
 }
