--- a/updater/build.gradle
+++ b/updater/build.gradle
@@ -29,6 +29,16 @@ android {
 
 dependencies {
     implementation 'com.android.support:appcompat-v7:' + support_library_version
+    implementation 'com.squareup.okio:okio:1.17.4'
+    implementation 'com.squareup.okhttp3:okhttp:3.14.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:retrofit:' + retrofit_version
+    implementation 'com.squareup.retrofit2:converter-gson:' + retrofit_version
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:' + retrofit_version
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.qw:soulpermission:1.2.1'
 }
 
 publish {
