convert to androidx

--- a/updater/src/main/AndroidManifest.xml
+++ b/updater/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         tools:ignore="UnusedAttribute">
 
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.file_provider"
             android:exported="false"
             android:grantUriPermissions="true">
