--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -48,9 +48,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:' + support_library_version
-    implementation 'com.android.support:design:' + support_library_version
-    implementation 'com.sunfusheng:GroupRecyclerViewAdapter:1.0.8'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation 'com.sunfusheng:GroupRecyclerViewAdapter:1.2.0'
 
     implementation project(':updater')
 }
